--- a/public/index.html
+++ b/public/index.html
@@ -530,7 +530,7 @@
                 <div class="file-preview">
                     <h4><i class="fas fa-file-code"></i> File Preview:</h4>
                     <div class="code-preview">
-                        <pre><code>cconst readline = require("readline");
+                        <pre><code>const readline = require("readline");
 const { execSync } = require("child_process");
 const fs = require("fs");
 const https = require("https");
